--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-slate-900">
+  <body class="bg-slate-200">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
